force-app/main/default/objects/P_L_Formula__c/P_L_Formula__c.object-meta.xml
<CustomObject>
    <label>P&amp;L Formula</label>
    <nameField>
        <label>P&amp;L Formulas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P&amp;L Formulas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>