force-app/main/default/objects/P_L_Formula__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>_</fullName>
            </value>
            <value>
                <fullName>*</fullName>
            </value>
            <value>
                <fullName>/</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>