force-app/main/default/objects/P_L_Formula__c/fields/P_L_Formula_A__c.field-meta.xml
<CustomField>
    <fullName>P_L_Formula_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P&amp;L Formula A</label>
    <referenceTo>P_L_Formula__c</referenceTo>
    <relationshipLabel>P&amp;L Formulas</relationshipLabel>
    <relationshipName>P_L_Formulas</relationshipName>
    <type>Lookup</type>
</CustomField>