force-app/main/default/objects/P_L_Formula__c/fields/P_L_Formula_B__c.field-meta.xml
<CustomField>
    <fullName>P_L_Formula_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P&amp;L Formula B</label>
    <referenceTo>P_L_Formula__c</referenceTo>
    <relationshipLabel>P&amp;L Formulas (P&amp;L Formula B)</relationshipLabel>
    <relationshipName>P_L_Formulas1</relationshipName>
    <type>Lookup</type>
</CustomField>