force-app/main/default/objects/P_L_Formula__c/validationRules/Only_Select_Category_A_OR_Formula_A.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Select_Category_A_OR_Formula_A</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(P_L_Category_A__c)),
NOT(ISBLANK( P_L_Formula_A__c))
)</errorConditionFormula>
    <errorMessage>Select either P&amp;L Category A or P&amp;L Formula A, both should not be selected.</errorMessage>
</ValidationRule>