force-app/main/default/objects/P_L_Formula__c/validationRules/Only_Select_Category_B_OR_Formula_B.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Select_Category_B_OR_Formula_B</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( P_L_Category_B__c )),
NOT(ISBLANK( P_L_Formula_B__c ))
)</errorConditionFormula>
    <errorMessage>Select either P&amp;L Category B or P&amp;L Formula B, both should not be selected</errorMessage>
</ValidationRule>