force-app/main/default/objects/P_L_Formula__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>P_L_Category_A__c</columns>
    <columns>P_L_Formula_A__c</columns>
    <columns>Operator__c</columns>
    <columns>P_L_Category_B__c</columns>
    <columns>P_L_Formula_B__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>